--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-    
+    <!-- navbar -->
+    <nav class="navbar navbar-light bg-dark text-center">
+        <h1 id="navH">Weather Dashboard</h1>
+    </nav>
 </body>
 </html>
