--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">   
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
@@ -15,6 +16,35 @@
     <!-- navbar -->
     <nav class="navbar navbar-light bg-dark text-center">
         <h1 id="navH">Weather Dashboard</h1>
-    </nav>
+    </nav>  
+
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <!-- search bar and recent search -->
+            <div id='searchContainer' class="col-lg-4">
+                <form>
+                    <label class="mt-1"><strong>Search for a City:</strong></label><br>
+                    <div class="input-group mb-3">
+                        <input type="text" id="userInput" class="form-control" >
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
+                        </div>
+                    </div>
+                </form>
+                <!-- div for appending recent searches -->
+                <div id="recent"></div>
+            </div>
+            <!-- current weather and 5 day  -->
+            <div id="displayContainer" class="col-lg-8">
+                <div class="card mt-3">
+                    <div class="card-body">
+                        <h5 id="currentH" class="card-title">dsacsdc</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
