created form submit event, started building queryURL and ajax

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="row justify-content-md-center">
             <!-- search bar and recent search -->
             <div id='searchContainer' class="col-lg-4">
-                <form>
+                <form id="search">
                     <label class="mt-1"><strong>Search for a City:</strong></label><br>
                     <div class="input-group mb-3">
                         <input type="text" id="userInput" class="form-control" >
