easy version complete

--- a/index.html
+++ b/index.html
@@ -35,14 +35,7 @@
                 <div id="recent"></div>
             </div>
             <!-- current weather and 5 day  -->
-            <div id="displayContainer" class="col-lg-8">
-                <div class="card mt-3">
-                    <div class="card-body">
-                        <h5 id="currentH" class="card-title">dsacsdc</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
+            <div id="displayContainer" class="col-lg-8"></div>
         </div>
     </div>
 
